include_HEADERS =				\
thread.h					\
attr.h						\
rwlock.h					\
mutex.h						\
SimpleIni.h					\
timeutil.h					\
cond.h						\
define.h					\
ConvertUTF.h					\
utils.h						\
platform.h					\
base.h						\
datahandler.h					\
signalhandler.h					\
netipc.h					\
dirs.h						\
crc.h                                           \
bprocess.h
